# vpsplayer

./: .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  README.md  com.github.fcrollet.vpsplayer.appdata.xml  generate_appimage_ci.sh  generate_linux  styles.qrc  vpsplayer  vpsplayer-win-MSVC.pro  vpsplayer.pro
.github/workflows/: appimage.yml
src/: Audio_player.cpp  Audio_player.h  Player_window.cpp  Player_window.h  Playing_progress.cpp  appsettings.cpp  appsettings.h  keyedit.cpp  keyedit.h  main.cpp  menustyle.cpp  menustyle.h  messagereceiver.cpp  messagereceiver.h  settingsdialog.cpp  settingsdialog.h  waveconvert.cpp  waveconvert.h  waveformbuilder.cpp  waveformbuilder.h  waveformthread.cpp  waveformthread.h  waveformwidget.cpp  waveformwidget.h
styles/: default.qss
